modified:   components/nav.html 	modified:   css/cssblog.css 	new file:   email_marketing.html 	new file:   images/email-marketing-measure.png 	new file:   images/email_marketing.png 	new file:   images/hubspot.png 	new file:   images/mailchimp.png 	modified:   locales/en.json 	modified:   locales/vi.json

--- a/components/nav.html
+++ b/components/nav.html
@@ -3,6 +3,6 @@
       <ul>
             <li><a href="/internet.html" data-link><img src="images/internet.jpeg" alt="Post 1"><p id="post1-title" data-translate="networkDefinitionTitle">Mạng máy tính</p></a></li>
             <li><a href="/to_cc_bcc_email_sending.html" data-link><img src="images/gmail.png" alt="Post 2"><p id="post1-title" data-translate="emailDifferencesTitle">Khác biệt giữa To, CC và BCC khi gửi Email ?</p></a></li>
-           
+            <li><a href="/email_marketing.html" data-link><img src="images/email_marketing.png" alt="Post 3"><p id="post1-title" data-translate="measuringEffectivenessInEmailMarketing">Measuring Effectiveness in Email Marketing</p></a></li>
       </ul>
 </aside>
