modified:   components/nav.html 	modified:   css/cssblog.css 	new file:   images/bad_dream_honda.jpg 	new file:   images/degree.jpeg 	new file:   images/do_mixi.jpeg 	new file:   images/dream_honda.jpeg 	new file:   images/old_people.jpeg 	new file:   images/old_people2.png 	new file:   images/quat_may_co.jpg 	new file:   images/rip.jpeg 	new file:   images/startup.jpeg 	new file:   images/tivi-co-xua.jpg 	modified:   locales/en.json 	modified:   locales/vi.json 	new file:   survivorship_bias.html

--- a/css/cssblog.css
+++ b/css/cssblog.css
@@ -357,9 +357,18 @@ th {
 }
 
 .float-container {
-    overflow: hidden; /* Đảm bảo chứa hình ảnh nổi bên trong khối văn bản */
+    overflow: hidden; 
+}
+.float-container img{
+    margin: 7px 15px 10px 0px;
 }
 .float-image {
     float: left; /* Đặt hình ảnh ở phía bên trái */
     width: 100px; /* Kích thước của hình ảnh */
+}
+.float-image2{
+    float: left; 
+    width: 200px;
+    height: 200px; 
+    
 }
