--- a/css/cssblog.css
+++ b/css/cssblog.css
@@ -262,6 +262,7 @@ td {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center
 }
 
 .image img {
@@ -270,6 +271,10 @@ td {
     object-fit: cover;
     border-radius: 8px;
 }
+.image.custom-height img {
+    width: auto !important;
+    height: auto !important;
+  }
 
 .caption {
     margin-top: 8px;
@@ -333,14 +338,29 @@ th {
     .table{
         max-width: 400px;
     }
-    
-    
+    .formula {
+        max-width: 320px;
+        word-wrap: normal; /* Ngăn cản xuống dòng */
+        overflow-x: auto; /* Thêm thanh cuộn ngang */
+        white-space: nowrap; /* Đảm bảo nội dung không xuống dòng */
+      }
+    .sidebar ul {
+        padding-left: 0; /* Bỏ padding left */
+        margin-left: 0; /* Bỏ margin left */
+        }
 }
 /* ------ */
 .formula {
     font-family: "Times New Roman", Times, serif;
     font-size: 1.2em;
 }
+.formula {
+    background-color: rgb(199, 245, 253);
+    padding: 10px;
+    border-radius: 5px;
+    display: block;
+    margin-top: 10px;
+  }
 .fraction {
     display: inline-block;
     text-align: center;
